set(g3dlite_STAT_SRCS
	AABox.cpp
	Box.cpp
	Crypto.cpp
	format.cpp
	Matrix3.cpp
	Plane.cpp
	System.cpp
	Triangle.cpp
	Vector3.cpp
	Vector4.cpp
	debugAssert.cpp
	fileutils.cpp
	g3dmath.cpp
	g3dfnmatch.cpp
	prompt.cpp
	stringutils.cpp
	Any.cpp
	BinaryFormat.cpp
	BinaryInput.cpp
	BinaryOutput.cpp
	Capsule.cpp
	CollisionDetection.cpp
	CoordinateFrame.cpp
	Cylinder.cpp
	Line.cpp
	LineSegment.cpp
	Log.cpp
	Matrix4.cpp
	MemoryManager.cpp
	Quat.cpp
	Random.cpp
	Ray.cpp
	ReferenceCount.cpp
	Sphere.cpp
	TextInput.cpp
	TextOutput.cpp
	UprightFrame.cpp
	Vector2.cpp
)

if(WIN32)
  include_directories(
    ${CMAKE_SOURCE_DIR}/dep/include/g3dlite
    ${CMAKE_SOURCE_DIR}/dep/include/zlib
  )
else()
  include_directories(
    ${CMAKE_SOURCE_DIR}/dep/include/g3dlite
  )
endif()

add_library(g3dlite STATIC ${g3dlite_STAT_SRCS})

if(WIN32)
  target_link_libraries(g3dlite
    zlib
  )
else()
  target_link_libraries(g3dlite
    ${ZLIB_LIBRARIES}
  )
endif()
